--- a/Example/package.json
+++ b/Example/package.json
@@ -4,12 +4,18 @@
     "displayName": "Intercom Cordova",
     "cordova": {
         "platforms": [
-            "ios",
-            "android"
-        ]
+            "android",
+            "ios"
+        ],
+        "plugins": {
+            "cordova-plugin-intercom": {}
+        }
     },
     "dependencies": {
         "cordova-android": "^10.1.1",
-        "cordova-ios": "^6.2.0"
+        "cordova-ios": "6.2.0"
+    },
+    "devDependencies": {
+        "cordova-plugin-intercom": "file:../intercom-plugin"
     }
 }
