--- a/Example/package.json
+++ b/Example/package.json
@@ -13,6 +13,9 @@
     },
     "dependencies": {
         "cordova-android": "^10.1.1",
-        "cordova-ios": "6.2.0"
+        "cordova-ios": "7.1.0"
+    },
+    "devDependencies": {
+        "cordova-plugin-intercom": "file:../intercom-plugin"
     }
 }
