--- a/intercom-plugin/package.json
+++ b/intercom-plugin/package.json
@@ -23,7 +23,7 @@
   "engines": [
     {
       "name": "cordova",
-      "version": ">=9.0.0"
+      "version": ">=12.0.0"
     },
     {
       "name": "cordova-android",
@@ -31,7 +31,7 @@
     },
     {
       "name": "cordova-ios",
-      "version": ">=6.2.0"
+      "version": "7.1.0"
     }
   ],
   "author": "Intercom",
